# x12-parser

./: BACKLOG.md  DEMO.md  EXTERNAL_835_COMPATIBILITY_REPORT.md  EXTERNAL_SAMPLE_TAXONOMY.md  FEEDBACK_QA.md  GAP_MATRIX.md  PROGRESS.md  PUSH_GATE.md  QUICKSTART.md  README.md  ROADMAP.md  ROOT_CAUSE_ANALYSIS_EXTERNAL_SAMPLES.md  VALIDATION.md  WORKFLOWS.md  pyproject.toml  run_tests.py
demo/: run.sh  sample_835_parsed.json  sample_835_validate.txt  sample_ws_validate.txt
examples/rules/: aetna-835-companion.sample.json  bcbs-837i-companion.sample.json  cigna-835-companion.sample.json  medicaid-837i-companion.sample.json  medicare-837i-companion.sample.json  premier-835-companion.sample.json  uhc-837p-companion.sample.json
external-test-files/: jobisez_sample_835.edi
external-test-results/: external_835_test_summary.json  external_837_test_summary.json  external_hdi_matrix.csv  external_hdi_matrix.json
external-test-results/hdi_835_all_fields_csv/: claims_835.csv
external-test-results/hdi_835_all_fields_sqlite/: IMPORT_GUIDE.txt  claims_837.csv  entities.csv  functional_groups.csv  interchanges.csv  schema.sql  service_lines.csv  transactions.csv
external-test-results/jobisez_sample_835_csv/: claims_835.csv  (+2 more)
scripts/: extract_segments.py
src/: __init__.py  cli.py  exporter.py  forensic.py  parser.py  payer_rules.py  preflight.py  reconcile.py  validate.py
tests/: conftest.py  test_exporter.py  test_external_835.py  test_external_samples.py  test_forensic.py  test_parser.py  test_payer_rules.py  test_preflight.py  test_reconcile.py  test_validate.py
(+25 files in other folders)
